Add a heading & change font of 'copy_a_page.html'

--- a/copy_a_page.html
+++ b/copy_a_page.html
@@ -11,6 +11,7 @@
             }
 
             * {
+                font-family: sans-serif;
                 text-align: center;
                 margin: auto;
                 padding: 6px;
@@ -37,6 +38,8 @@
     <body style="max-width: 800px;">
         <div id="loading">يتم التحميل...</div>
         <div id="main">
+            <h1>استعراض صفحات القرآن الكريم ونسخها في حال فقدتها بالخطأ أثناء استخدامك لرزمة <a href="https://github.com/ah-hamed/QuranCloze/">QuranCloze</a>
+            على أنكي</h1>
             <form>
                 <div>
                     <label for="pagenum" class="bold">رقم الصفحة</label>
