Fix images in README & 'copy_a_page.html'

--- a/copy_a_page.html
+++ b/copy_a_page.html
@@ -66,7 +66,7 @@
                             لا تقلق من الرموز والصيغ البرمجية التي ستظهر في النتيجة فقط قم بالضغط على زر النسخ، ثم الصق النتيجة في الحقل المطلوب في أنكي، ولكن في وضع تحرير HTML.
                             <a type="button" onclick="show_help()" href="#">عرض مثال</a>
                         </div>
-                        <img style="display: none; width: 95%; max-width: 650px;" id="help" src="https://github.com/ah-hamed/QuranCloze/blob/main/screenshots/html_editor.png">
+                        <img style="display: none; width: 95%; max-width: 650px;" id="help" src="https://raw.githubusercontent.com/ah-hamed/QuranCloze/main/screenshots/html_editor.png">
                     </div>
                     <button type="button" class="copy_button" onclick="copy_result_raw()" disabled>نسخ</button>
                     <div id="result_raw" class="background"></div>
