Update font in copy_a_page.html result to Uthmanic

--- a/copy_a_page.html
+++ b/copy_a_page.html
@@ -33,6 +33,15 @@
             .bold {
                 font-weight: bold;
             }
+
+            @font-face {
+                font-family: "UthmanicHafs";
+                src: url("internal_files/_UthmanicHafs1 Ver18.ttf");
+            }
+
+            #result_raw, #result_normal {
+                font-family: "UthmanicHafs";
+            }
         </style>
     </head>
     <body style="max-width: 800px;">
