Fix a problem in results font in 'copy_a_page.html'

--- a/copy_a_page.html
+++ b/copy_a_page.html
@@ -39,7 +39,8 @@
                 src: url("internal_files/_UthmanicHafs1 Ver18.ttf");
             }
 
-            #result_raw, #result_normal {
+            #result_raw, #result_normal,
+            #result_raw *, #result_normal * {
                 font-family: "UthmanicHafs";
             }
         </style>
